tests/compile-fail/compile_fail__local_string.snap
---
source: tests/compile-fail.rs
expression: stderr
---
error: unexpected token `x`
   ┌─ <input>:28:16
   │
28 │         string x = "hi";
   │                ^ unexpected token
   │
   = 
     Expected one of "!=", "%", "%=", "&", "&&", "&=", "(", ")", "*", "*=", "+", "+=", ",", "-", "-=", "/", "/=", ":", ";", "<", "<=", "=", "==", ">", ">=", "?", "@", "[", "]", "^", "^=", "{", "|", "|=", "||" or "}"


